Se borro codigo y funciones que no estaban haciendo nada.